[package]
publish = false
name = "dispatch-calls"
version = "0.0.1"
authors = ["Anton Engelhardt <antoncengelhardt@icloud.com>"]
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]

# log
log = "0.4.8"

# proxy-wasm
proxy-wasm = "0.2.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
