[package]
publish = false
name = "plugin-config"
version = "0.0.1"
authors = ["Anton Engelhardt <antoncengelhardt@icloud.com>"]
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]

# log
log = "0.4.28"

# serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# proxy-wasm
proxy-wasm = "0.2.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
